Fixed an incredibly annoying CSS bug that, for some insane reason, shifts elements with 'position: absolute;' slightly to the right and out of center with the <body>. TLDR: CSS is dumb.

--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -1,4 +1,7 @@
+
 body {
+  position: relative;
+  overflow-x: hidden;
   font-family: 'Merriweather', serif;
   font-weight: 300;
   font-style: normal;
